--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </li>
                 </ul>
                 <p class="vitae" id="vitae">
-                    <img class="download" src="/author/download.png" class="cap">下载我的 <a href=/uploads/vitae.docx target=_blank>个人简历</a>.
+                    <img class="download" src="/author/download.png" class="cap">下载我的 <a href="/uploads/CV_Fucheng Tian.docx" target=_blank>个人简历</a>.
                 </p>
             </div>
         </section>
