--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=stylesheet href=/css/index.css>
     <title>Tian Fucheng's personal homepage</title>
-    <script src="http://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
+    <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
 </head>
 
 <body>
