--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=stylesheet href=/css/index.css>
+    <link rel=stylesheet href=/tfc/css/index.css>
     <title>Tian Fucheng's personal homepage</title>
     <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
 </head>
@@ -43,7 +43,7 @@
     <div class="page-body">
         <section id="about" class="home-section">
             <div class="profile pro-l">
-                <img id="author" src="/author/010982cf-ded3-4b7a-a008-face653ff818.jpg" alt="Fucheng Tian" />
+                <img id="author" src="/tfc/author/010982cf-ded3-4b7a-a008-face653ff818.jpg" alt="Fucheng Tian" />
                 <div class="portrait-title">
                     <h2>田福成</h2>
                     <h3>Ph.D</h3>
@@ -68,7 +68,7 @@
                 <h1>教育经历：</h1>
                 <ul class="education">
                     <li>
-                        <img src="/author/cap.png" class="cap">
+                        <img src="/tfc/author/cap.png" class="cap">
                         <div class="description">
                             <p>2015/09 - 2020/06，国家同步辐射实验室，博士，导师：李良彬教授;</p>
                             <p class="edu-sc">中国科学技术大学</p>
@@ -76,7 +76,7 @@
 
                     </li>
                     <li>
-                        <img src="/author/cap.png" class="cap">
+                        <img src="/tfc/author/cap.png" class="cap">
                         <div class="description">
                             <p>2011/09 - 2015/06，力学与工程科学学院，学士；</p>
                             <p class="edu-sc">郑州大学</p>
@@ -85,7 +85,7 @@
                     </li>
                 </ul>
                 <p class="vitae" id="vitae">
-                    <img class="download" src="/author/download.png" class="cap">下载我的 <a href="/uploads/CV_Fucheng Tian.docx" target=_blank>个人简历</a>.
+                    <img class="download" src="/tfc/author/download.png" class="cap">下载我的 <a href="/uploads/CV_Fucheng Tian.docx" target=_blank>个人简历</a>.
                 </p>
             </div>
         </section>
@@ -197,11 +197,11 @@
             <h1 class="commend-title sanjiao">联系方式</h1>
             <ul class="email-wz">
                 <li>
-                    <img src="/author/email.png"/>
+                    <img src="/tfc/author/email.png"/>
                     <a href="mailto:tfc1992@ustc.edu.cn">tfc1992@ustc.edu.cn</a>
                 </li>
                 <li> 
-                    <img src="/author/wz.png"/>
+                    <img src="/tfc/author/wz.png"/>
                     <p>地址：安徽省合肥市蜀山区合作化南路42号国家同步辐射实验室 230029</p>
                     <div id="map-container"></div>
                 </li>
