--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="nav-right">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class=nav-link href=/#profile data-target=#profile><span>个人简介</span></a>
+                            <a class=nav-link href=./#profile data-target=#profile><span>个人简介</span></a>
                         </li>
                         <li class=nav-item>
                             <a class=nav-link href=/#paper data-target=#paper><span>代表论文</span></a>
