--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-left">
-                    <a class=navbar-brand href= />Academic</a>
+                    <a class=navbar-brand href="./">Academic</a>
                 </div>
                 <div class="nav-right">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class=nav-link href=./#profile data-target=#profile><span>个人简介</span></a>
+                            <a class=nav-link href="./#profile" data-target=#profile><span>个人简介</span></a>
                         </li>
                         <li class=nav-item>
                             <a class=nav-link href=/#paper data-target=#paper><span>代表论文</span></a>
