--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.swiper.com.cn/package/css/swiper.min.css">
     <link rel=stylesheet href=./css/index.css>
     <title>Tian Fucheng's personal homepage</title>
     <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
+    <script src="https://www.swiper.com.cn/package/js/swiper.min.js"></script>
 </head>
 
 <body>
@@ -116,6 +118,38 @@
                     </ul>
                 </div>
 
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop  width="100%"; height="100%">
+                            <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%">
+                            <source src="./video/DENT.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">Slide 3</div>
+                      <div class="swiper-slide">Slide 4</div>
+                      <div class="swiper-slide">Slide 5</div>
+                      <div class="swiper-slide">Slide 6</div>
+                      <div class="swiper-slide">Slide 7</div>
+                      <div class="swiper-slide">Slide 8</div>
+                      <div class="swiper-slide">Slide 9</div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%">
+                            <source src="./video/s3.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
+                </div>
+
                 <div class="edu-tem pd-top">
                     <h2 class="pro-title line">研究方向</h2>
                     <ul class="ul-edu">
@@ -220,6 +254,19 @@
             map.centerAndZoom(point, 16);
             map.addOverlay(new BMapGL.Marker(point));
             }}, "合肥市"); 
+
+            var swiper = new Swiper('.swiper-container', {
+                slidesPerView: 3,
+                spaceBetween: 30,
+                centeredSlides: true,
+                loop: true,
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                },
+            });
+
+            //var currentVideo = document.getElementsByClassName('')
     </script>
 </body>
 
