--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                       <div class="swiper-slide">Slide 9</div>
                       <div class="swiper-slide">
                         <video class="myVideo" controls="controls" loop width="100%"; height="100%">
-                            <source src="./video/s3.mp4" type="video/mp4">
+                            <source src="./video/S3.mp4" type="video/mp4">
                             您的浏览器不支持video标签!
                         </video>
                       </div>
