背景+整体字体风格

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+    <ul class="cb-slideshow">
+        <li><span>Image 01</span><div><h3><b></b><i></i></h3></div></li>
+        <li><span>Image 02</span><div><h3><b></b><i></i></h3></div></li>
+        <li><span>Image 03</span><div><h3><b></b><i></i></h3></div></li>
+        <li><span>Image 04</span><div><h3><b></b><i></i></h3></div></li>
+        <li><span>Image 05</span><div><h3><b></b><i></i></h3></div></li>
+       
+    </ul>
     <div class="page-header">
         <nav class="navbar">
             <div class="nav-container">
@@ -92,8 +100,7 @@
             </div>
         </section>
         <section id="profile" class="home-section">
-            <h1 class="commend-title sanjiao">个人简介</h1>
-
+            <h1 class="commend-title">个人简介</h1>
             <div class="edu-profile">
                 <div class="edu-tem">
                     <h2 class="pro-title line">学术能力</h2>
@@ -121,27 +128,86 @@
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop  width="100%"; height="100%">
+                        <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                             <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
                             您的浏览器不支持video标签!
                         </video>
                       </div>
                       <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                             <source src="./video/DENT.mp4" type="video/mp4">
                             您的浏览器不支持video标签!
                         </video>
                       </div>
-                      <div class="swiper-slide">Slide 3</div>
-                      <div class="swiper-slide">Slide 4</div>
-                      <div class="swiper-slide">Slide 5</div>
-                      <div class="swiper-slide">Slide 6</div>
-                      <div class="swiper-slide">Slide 7</div>
-                      <div class="swiper-slide">Slide 8</div>
-                      <div class="swiper-slide">Slide 9</div>
                       <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/film_casting.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/Mixed_I_II.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/mixed_I_III.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/multi-holes.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/peeling.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/S1.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/S2.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                             <source src="./video/S3.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/S4.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/S5.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/tear.mp4" type="video/mp4">
+                            您的浏览器不支持video标签!
+                        </video>
+                      </div>
+                      <div class="swiper-slide">
+                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                            <source src="./video/twisting.mp4" type="video/mp4">
                             您的浏览器不支持video标签!
                         </video>
                       </div>
@@ -183,7 +249,7 @@
         </section>
 
         <section id="paper" class="home-section">
-            <h1 class="commend-title sanjiao">代表性论文</h1>
+            <h1 class="commend-title">代表性论文</h1>
             <ul class="ul-paper">
                 <li><span class="v-timeline--item"></span><div class="paper-content">Mengnan Zhang, Erjie Yang, Jun Zeng, Jiale Ji, <strong>Fucheng Tian*</strong>, Liangbin Li*. Numerical study on
                     oblique stretching of viscoelastic polymer film. <strong>Journal of Non-Newtonian Fluid Mechanics</strong>, 2021,
@@ -228,7 +294,7 @@
         </section>
 
         <section id="contact"  class="home-section">
-            <h1 class="commend-title sanjiao">联系方式</h1>
+            <h1 class="commend-title">联系方式</h1>
             <ul class="email-wz">
                 <li>
                     <img src="./author/email.png"/>
