--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.0.0/css/swiper.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"> 
     <link rel=stylesheet href=./css/index.css>
     <title>Tian Fucheng's personal homepage</title>
     <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.0.0/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"> </script>
 </head>
 
 <body>
@@ -99,6 +99,11 @@
                 </p>
             </div>
         </section>
+        <section id="pic"  class="home-section1">
+            <marquee behavior="scroll" loop="-1" direction="left"  onmouseover="this.stop();" onmouseout="this.start();">
+                <img src="./imgs/6.jpg"/>
+            </marquee >
+        </section>
         <section id="profile" class="home-section">
             <h1 class="commend-title">个人简介</h1>
             <div class="edu-profile">
@@ -125,96 +130,95 @@
                     </ul>
                 </div>
 
-                <div class="swiper-container">
+                <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide">
-                        <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/DENT.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/film_casting.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/Mixed_I_II.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/mixed_I_III.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/multi-holes.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/peeling.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/S1.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/S2.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/S3.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/S4.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/S5.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/tear.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
-                      <div class="swiper-slide">
-                        <video class="myVideo" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                            <source src="./video/twisting.mp4" type="video/mp4">
-                            您的浏览器不支持video标签!
-                        </video>
-                      </div>
+                        <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/DENT.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/film_casting.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/Mixed_I_II.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/mixed_I_III.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/multi-holes.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/peeling.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S1.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S2.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S3.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S4.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S5.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/tear.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/twisting.mp4" type="video/mp4">
+                                您的浏览器不支持video标签!
+                            </video>
+                          </div>
                     </div>
-                    <!-- Add Pagination -->
                     <div class="swiper-pagination"></div>
-                </div>
+                  </div>
 
                 <div class="edu-tem pd-top">
                     <h2 class="pro-title line">研究方向</h2>
@@ -321,18 +325,32 @@
             map.addOverlay(new BMapGL.Marker(point));
             }}, "合肥市"); 
 
-            var swiper = new Swiper('.swiper-container', {
-                slidesPerView: 3,
-                spaceBetween: 30,
+            var swiper = new Swiper(".mySwiper", {
+                effect: "coverflow",
+                grabCursor: true,
                 centeredSlides: true,
-                loop: true,
+                slidesPerView: "auto",
+                initialSlide:2, // 默认显示下标，自行设置
+                // centeredSlides:true, // 居中显示
+                coverflowEffect: {
+                    rotate: 50,
+                    stretch: 0,
+                    depth: 100,
+                    modifier: 1,
+                    slideShadows: true,
+                },
                 pagination: {
-                    el: '.swiper-pagination',
-                    clickable: true,
+                    el: ".swiper-pagination",
+                },
+                on: {
+                    slideChange: function(){
+                      let videoList = document.getElementsByClassName('myVideo');
+                       for(let i=0;i<videoList.length;i++)
+                       videoList[i].pause();
+                    },
                 },
             });
 
-            //var currentVideo = document.getElementsByClassName('')
     </script>
 </body>
 
