--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="profile pro-l">
                 <img id="author" src="./author/010982cf-ded3-4b7a-a008-face653ff818.jpg" alt="Fucheng Tian" />
                 <div class="portrait-title">
-                    <h2>田福成</h2>
+                    <h2>田富成</h2>
                     <h3>Ph.D</h3>
                     <h3>
                         <a href="http://softmatter.ustc.edu.cn/2020/1112/c21087a459763/page.htm" target="_blank"
