--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                 <div class="nav-right">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class=nav-link href="./#profile" data-target=#profile><span>个人简介</span></a>
+                            <a class=nav-link href="./#profile" data-target=#profile><span>Home</span></a>
                         </li>
                         <li class=nav-item>
-                            <a class=nav-link href="./#paper" data-target=#paper><span>代表论文</span></a>
+                            <a class=nav-link href="./#paper" data-target=#paper><span>Pulications</span></a>
                         </li>
                         <!-- <li class=nav-item>
                             <a class=nav-link href=/#vitae data-target=#vitae><span>简历</span></a>
                         </li> -->
                         <li class=nav-item>
-                            <a class=nav-link href="./#contact" data-target=#contact><span>Email</span></a>
+                            <a class=nav-link href="./#contact" data-target=#contact><span>Contact</span></a>
                         </li>
                     </ul>
                 </div>
