--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 <body>
     <ul class="cb-slideshow">
         <li><span>Image 01</span><div><h3><b></b><i></i></h3></div></li>
-        <li><span>Image 02</span><div><h3><b></b><i></i></h3></div></li>
-        <li><span>Image 03</span><div><h3><b></b><i></i></h3></div></li>
-        <li><span>Image 04</span><div><h3><b></b><i></i></h3></div></li>
-        <li><span>Image 05</span><div><h3><b></b><i></i></h3></div></li>
-       
+        <!-- <li><span>Image 02</span><div><h3><b></b><i></i></h3></div></li> -->
     </ul>
     <div class="page-header">
         <nav class="navbar">
@@ -50,6 +46,11 @@
             </div>
         </nav>
     </div>
+    <section id="pic"  class="home-section1">
+        <!-- <marquee behavior="scroll" loop="-1" direction="left"  onmouseover="this.stop();" onmouseout="this.start();"> -->
+            <img src="./imgs/6.jpg"/>
+        <!-- </marquee > -->
+    </section>
     <div class="page-body">
         <section id="about" class="home-section">
             <div class="profile pro-l">
@@ -98,11 +99,6 @@
                     <img class="download" src="./author/download.png" class="cap">下载我的 <a href="./uploads/CV_FuchengTian.docx" target=_blank>个人简历</a>.
                 </p>
             </div>
-        </section>
-        <section id="pic"  class="home-section1">
-            <marquee behavior="scroll" loop="-1" direction="left"  onmouseover="this.stop();" onmouseout="this.start();">
-                <img src="./imgs/6.jpg"/>
-            </marquee >
         </section>
         <section id="profile" class="home-section">
             <h1 class="commend-title">个人简介</h1>
@@ -189,18 +185,6 @@
                           <div class="swiper-slide">
                             <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
                                 <source src="./video/S3.mp4" type="video/mp4">
-                                您的浏览器不支持video标签!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/S4.mp4" type="video/mp4">
-                                您的浏览器不支持video标签!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/S5.mp4" type="video/mp4">
                                 您的浏览器不支持video标签!
                             </video>
                           </div>
