--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-left">
-                    <a class=navbar-brand href="./">Academic</a>
+                    <a class=navbar-brand href="./">Home</a>
                 </div>
                 <div class="nav-right">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class=nav-link href="./#profile" data-target=#profile><span>Home</span></a>
+                            <a class=nav-link href="./#profile" data-target=#profile><span>Research</span></a>
                         </li>
                         <li class=nav-item>
                             <a class=nav-link href="./#paper" data-target=#paper><span>Pulications</span></a>
