--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 </div>
             </div>
             <div class="profile  pro-r">
-                <h1>教育背景：</h1>
-                <p>中国科学技术大学（国家同步辐射实验室）博后研究生.....,中国科学技术大学（国家同步辐射实验室）博后研究生.....,中国科学技术大学（国家同步辐射实验室）博后研究生.....,中国科学技术大学（国家同步辐射实验室）博后研究生.....
+                <h1>About me：</h1>
+                <p>I am a postdoctoral researcher at the sofmatter Lab,University of Science and Technology of China.My research is committed to revealing the underlying physical origins of the unsolved issues involving extreme deformations such as soft material fracture and nonlinear dynamic instability through advanced numerical simulations.,
                 </p>
 
                 <h1>教育经历：</h1>
