--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                             <a class=nav-link href="./#profile" data-target=#profile><span>Research</span></a>
                         </li>
                         <li class=nav-item>
-                            <a class=nav-link href="./#paper" data-target=#paper><span>Pulications</span></a>
+                            <a class=nav-link href="./#paper" data-target=#paper><span>Publications</span></a>
+                        </li>
+                        <li class=nav-item>
+                            <a class=nav-link href="./#profile" data-target=#profile><span>Resources</span></a>
                         </li>
                         <li class=nav-item>
                             <a class=nav-link href="./#contact" data-target=#contact><span>Contact</span></a>
@@ -194,39 +197,6 @@
                                 <p class="edu-sc">Zhengzhou University (ZZU), Zhengzhou, China</p>
                             </div>
 
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="edu-profile">
-                <div class="edu-tem">
-                    <h2 class="pro-title line">RESEARCH ACTIVITIES</h2>
-                    <ul class="ul-edu two-ul">
-                        <li>
-                            <p>Fracture physics at large deformations, 12/2018 -at present</p>
-                            <ul class="ul-edu-item">
-                                <li class="edu-sc">Reformat and program the phase field model of the quasi-static fracture in the framework of finite deformations (ha-PFM V2.0).</li>
-                                <li class="edu-sc">Investigate the effect of crack tip hyperelasticity on dynamic crack propagation stability (ha-PFM V2.1).</li>
-                                <li class="edu-sc">Couple edge-based smoothed FEM (ES-FEM) and PFM to deal with complex cracks in large deformations (ha-PFM V3.0).</li>
-                                <li class="edu-sc">Study the transonic fracture of the soft materials.</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <p>Phase field modeling of quasi-static and dynamic brittle fracture, 07/2017 - 11/2018</p>
-                            <ul class="ul-edu-item">
-                                <li class="edu-sc">Propose a novel hybrid adaptive finite element phase-field method (ha-PFM) to solve brittle fracture problems under quasi-static and dynamic loading.</li>
-                                <li class="edu-sc">Develop a FEM solver for linear elastic fracture based on the variation phase field method (ha-PFM V1.0).</li>
-                                <li class="edu-sc">Reveal the bifurcation criterion and the origin of limit crack velocity in dynamic brittle fracture.</li>
-                            </ul>
-                        </li>
-                        <li>
-                            <p>Hydrodynamic instability of viscoelastic fluids, 09/2015 - 06/2017</p>
-                            <ul class="ul-edu-item">
-                                <li class="edu-sc">The stabilization techniques [discrete elastic viscous stress splitting (DEVSS) and streamline upwind Petrov–Galerkin (SUPG)] were first introduced into the 2D film model. </li>
-                                <li class="edu-sc">Develop a FEM solver for multi-field (velocity field, stress field, temperature field) coupling of viscoelastic fluids (PolyLab V1.0).</li>
-                                <li class="edu-sc">Conduct the stability analysis of film casting based on a wider parameter space of processing and the rheological properties of the polymer melt.</li>
-                            </ul>
                         </li>
                     </ul>
                 </div>
