--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=yes"/>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"> 
+    <link rel="stylesheet" href="https://www.swiper.com.cn/package/swiper-bundle.min.css"> 
     <link rel=stylesheet href=./css/index.css>
     <title>Tian Fucheng's personal homepage</title>
     <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"> </script>
+    <script src="https://www.swiper.com.cn/package/swiper-bundle.min.js"> </script>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
     <div class="page-body">
         <section id="about" class="home-section">
             <div class="profile pro-l">
-                <img id="author" src="./author/010982cf-ded3-4b7a-a008-face653ff818.jpg" alt="<strong>Fucheng Tian</strong>" />
+                <img id="author" src="./author/tfc.jpg" alt="Fucheng Tian" />
                 <div class="portrait-title">
                     <h2><strong>Fucheng Tian</strong></h2>
                     <h3>Ph.D</h3>
@@ -69,7 +69,7 @@
             </div>
             <div class="profile  pro-r">
                 <h1>ABOUT ME：</h1>
-                <p>I am a postdoctoral researcher at the sofmatter Lab,University of Science and Technology of China (中国科学技术大学，合肥). My research is committed to revealing the underlying physical origins of the unsolved issues involving extreme deformations such as soft material fracture and nonlinear dynamic instability through advanced numerical simulations.
+                <p>I am a postdoctoral researcher at the <a href="http://softmatter.ustc.edu.cn/" target="_blank">softmatter Lab</a>,University of Science and Technology of China (中国科学技术大学，合肥). My research is committed to revealing the underlying physical origins of the unsolved issues involving extreme deformations such as soft material fracture and nonlinear dynamic instability through advanced numerical simulations.
                 </p>
                 <h1>SKILLS & ABILITIES：</h1>
                 <ul class="ul-edu no-pat">
@@ -86,95 +86,6 @@
         </section>
         <section id="profile" class="home-section">
             <h1 class="commend-title">Profile</h1>
-
-            <div class="edu-profile">
-                <div class="edu-tem">
-                    <h2 class="pro-title line">RESEARCH INTERESTS</h2>
-                    <ul class="ul-edu">
-                        <li>Phase field modeling of fracture at large deformations;</li>
-                        <li>Fracture physics and flow instability;</li>
-                        <li>Advanced algorithms (adaptive mesh, meshfree, machine learning, etc.) </li>
-                    </ul>
-                </div>
-
-                <div class="swiper mySwiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/DENT.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/film_casting.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/Mixed_I_II.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/mixed_I_III.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/multi-holes.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/peeling.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/S1.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/S2.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/S3.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/tear.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                          <div class="swiper-slide">
-                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
-                                <source src="./video/twisting.mp4" type="video/mp4">
-                                Sorry,Your browser does not support Video Tags!
-                            </video>
-                          </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                  </div>
-            </div>
 
             <div class="edu-profile">
                 <div class="edu-tem">
@@ -215,22 +126,100 @@
                     </ul>
                 </div>
                 <div class="edu-tem  pd-top">
-                    <h2 class="pro-title line">主持项目 </h2>
+                    <h2 class="pro-title line">Projects </h2>
                     <ul class="ul-edu">
                         <li>
-                            <p>国家自然科学基金青年基金，超弹性材料亚声速断裂机理研究，2022.1-2023.12; 主持</p>
+                            <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
+                            <p>Study on the dynamic instability mechanism for subsonic crack in
+                                superelastic materials at large deformation.</p>
+                            <p>2022.1-2023.12, hold.</p>
                             <!-- <p></p> -->
                         </li>
                     </ul>
                 </div>
-              
+            </div>
 
+            <div class="edu-profile">
+                <div class="edu-tem">
+                    <h2 class="pro-title line">RESEARCH INTERESTS</h2>
+                    <ul class="ul-edu">
+                        <li>Phase field modeling of fracture at large deformations;</li>
+                        <li>Fracture physics and flow instability;</li>
+                        <li>Advanced algorithms (adaptive mesh, meshfree, machine learning, etc.) </li>
+                    </ul>
+                </div>
+
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop  width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/brittle_fracture_3D.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto" controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/DENT.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/Mixed_I_II.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/mixed_I_III.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/multi-holes.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/peeling.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S1.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/S3.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/tear.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                          <div class="swiper-slide">
+                            <video class="myVideo" style="object-fit:fill" webkit-playsinline="true" x-webkit-airplay="true" x5-video-play-type="h5" x5-video-orientation="h5" preload="auto"  controls="controls" loop width="100%"; height="100%" controlslist="nodownload noremoteplayback" disablePictureInPicture>
+                                <source src="./video/twisting.mp4" type="video/mp4">
+                                Sorry,Your browser does not support Video Tags!
+                            </video>
+                          </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                  </div>
             </div>
 
         </section>
 
         <section id="paper" class="home-section">
-            <h1 class="commend-title">代表性论文</h1>
+            <h1 class="commend-title">Publications</h1>
             <ul class="ul-paper">
                 <li><span class="v-timeline--item"></span><div class="paper-content">Erjie Yang, Mengnan Zhang, Jun Zeng, <strong>Fucheng Tian*</strong>. Wrinkling and restabilization of hyperelastic PDMS membrane at finite strain.<strong> Soft Matter</strong>, 2022.</div></li>
 
