--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=yes"/>
-    <link rel="stylesheet" href="https://www.swiper.com.cn/package/swiper-bundle.min.css"> 
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css"> 
     <link rel=stylesheet href=./css/index.css>
     <title>Tian Fucheng's personal homepage</title>
     <script src="https://api.map.baidu.com/api?&v=3.0&type=webgl&ak=NXDzEkh5YQPPFykYjb4B0y3GB8Wo8vq1"></script>
-    <script src="https://www.swiper.com.cn/package/swiper-bundle.min.js"> </script>
+    <script src="./js/swiper-bundle.min.js"> </script>
 </head>
 
 <body>
