--- a/index.html
+++ b/index.html
@@ -125,18 +125,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="edu-tem  pd-top">
-                    <h2 class="pro-title line">Projects </h2>
-                    <ul class="ul-edu">
-                        <li>
-                            <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
-                            <p>Study on the dynamic instability mechanism for subsonic crack in
-                                superelastic materials at large deformation.</p>
-                            <p>2022.1-2023.12, hold.</p>
-                            <!-- <p></p> -->
-                        </li>
-                    </ul>
-                </div>
             </div>
 
             <div class="edu-profile">
@@ -214,6 +202,21 @@
                     </div>
                     <div class="swiper-pagination"></div>
                   </div>
+            </div>
+
+            <div class="edu-profile">
+                <div class="edu-tem  pd-top">
+                    <h2 class="pro-title line">Projects </h2>
+                    <ul class="ul-edu">
+                        <li>
+                            <p>Young Scientists Fund of the National Natural Science Foundation of China. </p>
+                            <p>Study on the dynamic instability mechanism for subsonic crack in
+                                superelastic materials at large deformation.</p>
+                            <p>2022.1-2023.12, hold.</p>
+                            <!-- <p></p> -->
+                        </li>
+                    </ul>
+                </div>
             </div>
 
         </section>
