--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div class="nav-right">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class=nav-link href="./#profile" data-target=#profile><span>Research</span></a>
+                            <a class=nav-link href="./#research" data-target=#research><span>Research</span></a>
                         </li>
                         <li class=nav-item>
                             <a class=nav-link href="./#paper" data-target=#paper><span>Publications</span></a>
                         </li>
                         <li class=nav-item>
-                            <a class=nav-link href="./#profile" data-target=#profile><span>Resources</span></a>
+                            <a class=nav-link href="./#resources" data-target=#resources><span>Resources</span></a>
                         </li>
                         <li class=nav-item>
                             <a class=nav-link href="./#contact" data-target=#contact><span>Contact</span></a>
@@ -127,6 +127,10 @@
                 </div>
             </div>
 
+        </section>
+
+        <section id="research" class="home-section">
+            <h1 class="commend-title">Research</h1>
             <div class="edu-profile">
                 <div class="edu-tem">
                     <h2 class="pro-title line">RESEARCH INTERESTS</h2>
@@ -218,7 +222,13 @@
                     </ul>
                 </div>
             </div>
+        </section>
 
+        <section id="resources" class="home-section">
+            <h1 class="commend-title">Resources</h1>
+            <div class="edu-profile">
+                buliding……
+            </div>
         </section>
 
         <section id="paper" class="home-section">
